<resources>
    <string name="app_name">GS App</string>
    <string name="toolbarName">GoldManSachs App</string>
    <string name="action_settings">Settings</string>
    <string name="astronomy_picture_fragment_label">Astronomy Picture Details</string>
    <string name="main_fragment_label">Main Fragment</string>
    <string name="favorite_fragment_label">Favorite Fragment</string>
    <string name="cml_tab_title_Astronomy_picture">Astronomy Picture</string>
    <string name="cml_tab_title_favorite">Favorite Items</string>
    <string name="dateFormat">Click Here to Select the date</string>
    <string name="noInternet">Couldn\'t able to load data due to Connection lost.\n\nPlease check Network Settings.</string>
    <string name="dateTxt">Date : </string>
    <string name="tittleTxt">Tittle : </string>
    <string name="explanationTxt">Explanation :</string>
    <string name="infoTxt">Please Select a Date to display Astronomy Picture of the day</string>
    <string name="favoriteTxt">Have you Loved it \!!\nLet\'s Make it as Favorite</string>
    <string name="addedToFavorites">Astronomy Day Details has been added to Favourites</string>
</resources>