<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/MainFragment">

    <fragment
        android:id="@+id/MainFragment"
        android:name="com.goldmanscachs.task.view.MainFragment"
        android:label="@string/main_fragment_label"
        tools:layout="@layout/fragment_main">

        <action
            android:id="@+id/action_MainFragment_to_AstronomyPictureFragment"
            app:destination="@id/AstronomyPictureFragment" />
    </fragment>

    <fragment
        android:id="@+id/AstronomyPictureFragment"
        android:name="com.goldmanscachs.task.view.AstronomyPictureFragment"
        android:label="@string/astronomy_picture_fragment_label"
        tools:layout="@layout/astronomy_picture">

        <action
            android:id="@+id/action_astronomy_picture_to_FavoriteFragment"
            app:destination="@id/FavoriteFragment" />
    </fragment>

    <fragment
        android:id="@+id/FavoriteFragment"
        android:name="com.goldmanscachs.task.view.FavoriteFragment"
        android:label="@string/favorite_fragment_label"
        tools:layout="@layout/fragment_favorite" />
</navigation>