<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AstronomyPictureFragment">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dateText_input_layout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/astronomyPicture"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_margin="@dimen/_10sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/explanationTxtValue"
                tools:src="@drawable/ic_launcher_background" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/explanationTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:text="@string/explanationTxt"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/titleTxt"
                tools:text="Explanation :" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/explanationTxtValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_10sdp"
                android:textColor="#0000FF"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/explanationTxt"
                tools:text="Astronomy Picture explanation" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/titleTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:text="@string/tittleTxt"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dateTxt"
                tools:text="Title :" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/titleTxtValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:textColor="#0000FF"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintBaseline_toBaselineOf="@+id/titleTxt"
                app:layout_constraintStart_toEndOf="@id/titleTxt"
                tools:text="Astronomy Picture Tittle" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/favoriteTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:drawableEnd="@drawable/ic_favorite_empty"
                android:lineSpacingExtra="@dimen/_10sdp"
                android:text="@string/favoriteTxt"
                android:textColor="#F00"
                android:textSize="@dimen/_20ssp"
                app:layout_constraintBottom_toTopOf="@id/dateTxt"
                app:layout_constraintStart_toStartOf="parent" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/dateTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:text="@string/dateTxt"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/favoriteTxt"
                tools:text="Date :" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/dateTxtValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:textColor="#0000FF"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintBaseline_toBaselineOf="@+id/dateTxt"
                app:layout_constraintStart_toEndOf="@id/dateTxt"
                tools:text="dd-MM-yyyy" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/infoTxv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:text="@string/infoTxt"
        android:textColor="#92b"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/infoTxt" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dateText_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:hint="@string/dateFormat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoTxv">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dateEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_baseline_calendar"
            android:focusable="false"
            android:imeOptions="actionNext"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>